Made LoopAnalysis and IntrinsicsInlining runnable on single functions.